[gd_scene load_steps=2 format=3 uid="uid://bptjudi0ka33e"]

[ext_resource type="Script" uid="uid://b3gessybvvkpe" path="res://minigames/termo/termo.gd" id="1"]

[node name="WordleGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "WORDLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="InputContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputLabel" type="Label" parent="VBoxContainer/InputContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="VBoxContainer/MessageContainer"]
layout_mode = 2
text = "Guess the 5-letter word!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Submit Guess"

[node name="NewGameButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Game"
